<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微博</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_login">登陆</string>
    <string name="login_find">找回密码</string>
    <string name="login_regist">新用户</string>
    <string name="main_tab1">首页</string>
    <string name="main_tab2">消息</string>
    <string name="main_tab3">发现</string>
    <string name="main_tab4">我</string>
    <string name="action_comment">评论</string>
    <string name="action_zan">赞</string>
    <string name="action_tweet">转发</string>
    <string name="action_collect">收藏</string>
    <string name="setting_account">账号管理</string>
    <string name="setting_scale">字号设置</string>
    <string name="setting_music">声音设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_about">关于微博</string>
    <string name="setting_cache">清除缓存</string>
    <string name="setting_light">夜间模式</string>
    <string name="setting_exit">退出微博</string>
    <string name="about_pingfen">给我评分</string>
    <string name="about_guanfang">官方微博</string>
    <string name="about_gengxin">版本更新</string>
    <string name="about_problem">常见问题</string>
    <string name="service_message_detail">1、微博是一款免费网络应用软件。在使用的过程中产生的网络流量费用由用户自行承担，详情请咨询您当地的网络服务提供商。 \n 2、由于不可抗力，中断和缺失、设备故障、通讯故障、户信息服务出现中断、停顿、延迟、数据错误等情况口袋微博不承担任何责任。\n 3、微博相关资讯如与制造商最终公布的产品有所出入，以制造商最终公布的参数为准，我们不保证产品未发布阶段信息内容的准确性、完整性，不承担由此引起的任何损失、损害。\n 4、用户在使用微博的服务时，必须注意账号信息的保密，防止身份信息被他人仿冒。凡密码正确情况下所进行的一切行为，均视为用户本人的行为。由此造成的损失、损害由用户自行承担。\n 5、用户注册和使用微博提交的个人信息，我们将为用户严格保护，绝不不外泄第三方。用户因遭遇黑客攻击、木马病毒、恶意侵入、网络拦截等行为而造成的资料外泄微博不承担任何责任。\n 6、本声明的最终解释权归微博所有。\n 以上风险提示，您已阅读并理解，如果您点击“同意”按钮继续使用，即表明同意承担使用该业务存在的全部风险。\n</string>
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>
    <string name="copyright">Copyright&#160;&#160;&#169;&#160;&#160;2010-2015&#160;&#160;weibo</string>
    <string name="support">视频播放技术由vitamio提供</string>
    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <!-- profile -->
    <string name="hobby">编辑爱好</string>
    <string name="hobby_hint">例如，篮球、唱歌</string>
    <string name="intro">编辑简介</string>
    <string name="intro_hint">例如，活泼、开朗</string>

    <string-array name="sex">
        <item>男</item>
        <item>女</item>
        <item>保密</item>
    </string-array>

</resources>